app/bundles/CoreBundle/Assets/css/app.css
/* ... */
.card-gradient .link, .card-gradient a, .card-gradient a:hover {
  color: var(--text-on-color);
}
.link-group {
  display: flex;
  gap: 20px;
}

.marketplace-card-container {
  width: calc(33% - 30px);
  height: 300px;
  padding: 30px;
  background: #F8F8F8;
  flex-direction: column;
  justify-content: space-between;
  align-items: stretch;
  gap: 16px;
  display: inline-flex;
}

@media (max-width: 1390px) {
  .marketplace-card-container {
    width: calc(50% - 30px);
  }
}

@media (max-width: 1200px) {
  .marketplace-card-container {
    width: 100%;
  }
}

.marketplace-card-container .btn {
  margin: 0;
}

.card-content {
  align-self: stretch;
  flex: 1 1 0;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
}

.card-title {
  align-self: stretch;
  color: black;
  font-size: 23px;
  font-family: Source Sans 3;
  font-weight: 600;
  word-wrap: break-word;
}

.card-description {
  font-size: 12px;
}

.card-author {
  justify-content: space-between;
  align-items: center;
  display: flex;
}

.card-author-icon {
  font-size: 22px;
}

.card-author-name {
  font-size: 10px;
  text-transform: capitalize;
}

.card-stats {
  gap: 10px;
  display: flex;
}

.card-stat {
  align-items: center;
  gap: 3px;
  display: flex;
}

.card-stat-icon {
  width: 13px;
  height: 13px;
  position: relative;
}

.card-stat-icon-inner {
  width: 10.83px;
  height: 9.75px;
  left: 1.08px;
  top: 1.62px;
  position: absolute;
  background: black;
}

.card-stat-value {
  font-size: 11px;
}

.card-action-icon {
  width: 16px;
  height: 16px;
  position: relative;
}

.card-action-icon-inner {
  width: 10.67px;
  height: 10.37px;
  left: 2.67px;
  top: 2.81px;
  position: absolute;
  background: #4E5D9D;
}

.divider-sm, .divider-md, .divider-lg, .divider-xl {
  height: 1px;
  overflow: hidden;
  background-color: #eaeaea;
}

.divider-sm {
  margin: 16px 0;
}

.divider-md {
  margin: 24px 0;
}

.divider-lg {
  margin: 32px 0;
}

.divider-xl {
  margin: 48px 0;
}

html,
body {
  width: 100%;
  height: 100%;
}
body {
  overflow-y: scroll;
}
body > #app-wrapper {
  overflow: hidden;
  position: relative;
  height: auto;
  min-height: 100%;
  width: 100%;
}
.sidebar-left-open {
  overflow: hidden;
}
.sidebar-left-open body > section#app-wrapper {
  overflow-x: hidden;
}
@media (min-width: 768px) {
  body {
    overflow-x: hidden;
  }
}
@media (min-width: 970px) {
  .modal {
    overflow-y: auto;
  }
  .modal-open {
    overflow: auto;
  }
}
.csstransforms3d.sidebar-open-ltr #app-header.navbar {
  -webkit-transform: translate3d(230px, 0, 0);
  transform: translate3d(230px, 0, 0);
}
.no-csstransforms3d.sidebar-open-ltr #app-header.navbar {
  left: 230px;
}
.csstransforms3d.sidebar-open-rtl #app-header.navbar {
  -webkit-transform: translate3d(-230px, 0, 0);
  transform: translate3d(-230px, 0, 0);
}
.no-csstransforms3d.sidebar-open-rtl #app-header.navbar {
  left: -230px;
  right: 230px;
}
#app-header.navbar {
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: var(--background-inverse-transparent);
  float: left;
  z-index: 1005;
  height: 48px;
  border-bottom: 1px solid var(--border-inverse);
  border-radius: 0;
  margin-bottom: 0;
  backdrop-filter: var(--background-blur);
}
.header-fixed #app-header.navbar {
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
}
.header-fixed #app-header.navbar ~ #app-content > .content-body {
  padding: 60px 20px 20px;
}
@media (min-width: 767px) {
  .header-fixed #app-header.navbar ~ #app-content > .content-body {
    padding: 100px 80px 46px;
  }
}
#app-header.navbar .navbar-nocollapse:before,
#app-header.navbar .navbar-nocollapse:after {
  display: table;
  content: " ";
}
#app-header.navbar .navbar-nocollapse:after {
  clear: both;
}
#app-header.navbar .navbar-nocollapse .navbar-header {
  height: 60px;
}
#app-header.navbar .navbar-nocollapse .navbar-header .navbar-toggle {
  display: inline-block;
  float: left;
  margin: 0;
  border-width: 0;
  padding: 24px 15px;
}
#app-header.navbar .navbar-nocollapse .navbar-header .navbar-toggle .icon-bar {
  margin-left: auto;
  margin-right: auto;
  background-color: rgba(0, 0, 0, 0.6);
  height: 2px;
  width: 18px;
  border-radius: 0;
}
#app-header.navbar .navbar-nocollapse .navbar-header .navbar-toggle .icon-bar + .icon-bar {
  margin-top: 3px;
}
#app-header.navbar .navbar-nocollapse .navbar-nav {
  float: left;
  margin: 0;
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li {
  float: left;
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a {
  color: var(--text-inverse);
  line-height: 48px;
  padding-top: 0;
  padding-bottom: 0;
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a:before,
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a:after {
  display: table;
  content: " ";
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a:after {
  clear: both;
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a .sli {
  top: 1px;
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a > img,
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a > .img-wrapper {
  display: inline-block;
  width: 28px;
  height: 28px;
  margin-top: -11px;
  margin-bottom: -11px;
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a > .badge,
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a > .label {
  position: absolute;
  z-index: 1;
  top: 12px;
  right: 8px;
  font-size: 10px;
  padding: 0 4px;
  line-height: 16px;
  height: 16px;
  min-width: 16px;
  border-radius: 16px;
  -webkit-box-shadow: 0 0 0 2px #ffffff;
  box-shadow: 0 0 0 2px #ffffff;
}
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a > .badge.pull-right,
#app-header.navbar .navbar-nocollapse .navbar-nav > li > a > .label.pull-right {
  left: auto;
  right: 4px;
}
/* ... */

